# mining-pipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTOMATION_ASSESSMENT.md  CLAUDE.md  DRIVE_MAP.md  INSPECTION_FINDINGS.md  METHODOLOGY_DISCREPANCIES.md  PHASE_00_01_INPUTS_OUTPUTS_REPORT.md  PHASE_00_01_REPORT.md  PHASE_00_01_SIMPLE_SUMMARY.md  PHASE_02_PLAN.md  PHASE_03_PLAN.md  PHASE_04_PLAN.md  PROJECT_STATUS.md  README.md  README.txt  REGISTER_RECONCILIATION.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: implementation_backlog.yaml  input_register.csv  project.yaml  raw_manifest.csv
config/methodology/: authority.yaml  automation_boundaries.yaml  automation_readiness.yaml  discrepancies.yaml  execution_policy.yaml  phase00.yaml  phase01.yaml  phase02.yaml  phase02_processing.yaml  phase03.yaml  phase04.yaml  phase04_migration.yaml  phase05.yaml
docs/: AI_TO_QGIS_VERTICAL_SLICE.md  XV-023222_Buduunkhad_Exploration_Workflow_Methodology_78Inputs_v6_Phasewise_File_Processing_Output_Matrix.docx  XV-023222_Buduunkhad_Exploration_Workflow_Methodology_78Inputs_v6_Phasewise_File_Processing_Output_Matrix.md  XV-023222_Buduunkhad_Exploration_Workflow_Methodology_78Inputs_v9_25km_Clickable_TOC_PageNumbers.docx  XV-023222_Buduunkhad_Exploration_Workflow_Methodology_78Inputs_v9_25km_Clickable_TOC_PageNumbers.md
docs/adr/: 0001-raw-data-storage-and-ingest.md
docs/architecture/: AI_FIRST_MIGRATION.md
docs/methodology/phase_04/: Phase_4_Preliminary_Prospect_Delineation_and_Ranking_Guide_MN.docx
docs/methodology/phase_06/: Phase_6_Recon_Mapping_and_pXRF_Field_Screening_Detailed_Guide_MN.docx
docs/methodology/phase_07/: Phase_7_Rock_Chip_Channel_Verification_Sampling_Guide_MN.docx
docs/methodology/phase_09/: Phase_9_Systematic_Soil_Grid_Laboratory_QAQC_Detailed_Guide_MN.docx
docs/methodology/phase_10/: Phase_10_Integrated_Interpretation_Final_Target_Ranking_Guide_MN.docx
docs/methodology/phase_11/: Phase_11_Follow_Up_Trench_Geophysics_Scout_Drill_Planning_Guide_MN.docx
docs/methodology/phase_99/: 99_Final_Deliverables_Detailed_Guide_MN.docx
docs/phase_00/: Phase_0_Raw_Files_Archive_Extract_MN.md
docs/phase_01/: XV-023222_Buduunkhad_Phase1_Methodology.docx  XV-023222_Buduunkhad_Phase1_Methodology.md
docs/phase_02/: Phase_2_Remote_Sensing_Preprocessing_Guide_MN.docx  Phase_2_Remote_Sensing_Preprocessing_Guide_MN.md  QGIS_4_0_2_Google_HighResolution_Basemap_Detailed_Guide.docx  QGIS_4_0_2_Google_HighResolution_Basemap_Detailed_Guide.md  XV023222_Buduunkhad_QGIS402_DEM_ALOS_PALSAR_ASTERGDEM_Detailed_Guide.md  XV023222_Buduunkhad_Sentinel2_QGIS402_Detailed_Guide_v01.docx  XV023222_Buduunkhad_Sentinel2_QGIS402_Detailed_Guide_v01.md
docs/phase_02/ASTER_Project/: ASTER_QGIS_402_SOP_non_geologist_MN.md  ASTER_QGIS_chat_full_manual_COMPLETE.md
docs/phase_03/: Phase_3_Geological_Metallogenic_and_CMCS_Synthesis_Guide_MN.docx  Phase_3_Geological_Metallogenic_and_CMCS_Synthesis_Guide_MN.md
docs/phase_03/Input/: 2013_MN_L47-XIX_GoldOccurrenceDescriptions_XIX-74-A_4186_v01_raw.docx  2013_MN_L47-XIX_GoldOccurrenceDescriptions_XIX-74-A_4186_v01_raw.md  Relevant ore formation and regional context notes _1M500K_2021.docx  Relevant ore formation and regional context notes _1M500K_2021.md
docs/phase_03/Output/: Buduunhad_Deposit_Type_Preliminary_Assessment_MN.docx  Buduunhad_Deposit_Type_Preliminary_Assessment_MN.md  Chat GPT processing.docx  Chat GPT processing.md
docs/phase_04/: Phase_4_Preliminary_Prospect_Delineation_and_Ranking_Guide_MN.md
docs/phase_04/Output/: BH_Preliminary_Prospect_Candidate_Areas_Report_v01.docx  (+1 more)
docs/phase_05/: Matrice400_ZenmuseL3_Universal_Flight_Planning_Template.docx  Matrice400_ZenmuseL3_Universal_Flight_Planning_Template.md  Phase_5_Drone_LiDAR_Photogrammetry_Detailed_Guide_MN.docx  Phase_5_Drone_LiDAR_Photogrammetry_Detailed_Guide_MN.md  XV-023222_Phase5_LiDAR_P1_DJI_Terra_QGIS403_Folder_Flight_Planning_Updated.docx  XV-023222_Phase5_LiDAR_P1_DJI_Terra_QGIS403_Folder_Flight_Planning_Updated.md  XV-023222_Phase5_LiDAR_P1_DJI_Terra_QGIS403_Folder_and_Step_by_Step_Guide.docx  XV-023222_Phase5_LiDAR_P1_DJI_Terra_QGIS403_Folder_and_Step_by_Step_Guide.md
docs/phase_06/: Phase_6_Recon_Mapping_and_pXRF_Field_Screening_Detailed_Guide_MN.md
docs/phase_07/: Phase_7_Rock_Chip_Channel_Verification_Sampling_Guide_MN.md
docs/phase_08/: Phase_8_Orientation_Soil_StreamSediment_HeavyMineral_Check_Detailed_Guide_MN.docx  Phase_8_Orientation_Soil_StreamSediment_HeavyMineral_Check_Detailed_Guide_MN.md
docs/phase_09/: Phase_9_Systematic_Soil_Grid_Laboratory_QAQC_Detailed_Guide_MN.md
docs/phase_10/: Phase_10_Integrated_Interpretation_Final_Target_Ranking_Guide_MN.md
docs/phase_11/: Phase_11_Follow_Up_Trench_Geophysics_Scout_Drill_Planning_Guide_MN.md
docs/phase_99/: 99_Final_Deliverables_Detailed_Guide_MN.md
src/buduunkhad/: __init__.py  ai_cli.py  cli.py  config.py  pipeline.py  repository_policy.py
tests/: conftest.py  network_guard_sequence_probe.py  test_ai_vertical_slice.py  test_aster.py  test_boundary_validation.py  test_cli_compat.py  test_concurrent_test_isolation.py  test_config.py  test_dem.py  test_evidence_manifest.py  test_execution_policy.py  test_hardening.py  test_ingest.py  test_methodology.py  test_methodology_readiness.py  test_naming.py  test_network_policy.py  test_phase00.py  test_phase01.py  test_phase02.py  test_phase02_clip_cog.py  test_phase02_vectors.py  test_phase03_ai_handoff.py  test_phase03_synthesis.py  test_phase04_prospect_ranking.py  test_pipeline.py  test_pr1_scope.py  test_publish.py  test_qgis_project.py  test_raw_guard.py  test_repository_policy.py  test_sidecars.py  test_wheel_prompts.py
tests/ai/: __init__.py  conftest.py  test_artifacts.py  test_config.py  test_contracts.py  test_fingerprint.py  test_prompts.py  test_providers.py  test_review.py  test_schema_identity.py
tests/fixtures/: ai_vertical_slice_response.json  legacy_project_config.json  legacy_project_config_dump.json
tests/support/: __init__.py  providers.py  renderers.py
(+97 files in other folders)
