[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "buduunkhad"
version = "0.8.0"
description = "Config-driven geospatial pipeline for the Buduunkhad / XV-023222 exploration workflow methodology (phases 00-99)."
readme = { text = "Buduunkhad geospatial exploration pipeline. Repository governance and the current implemented-state summary are maintained in AGENTS.md.", content-type = "text/plain" }
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Netgroup / Buduunkhad project team" }]
keywords = ["geospatial", "mineral-exploration", "GIS", "QGIS", "GDAL"]

# Runtime dependencies. GDAL ships bundled inside the rasterio/fiona/geopandas
# wheels on Windows + Linux, so `pip install` works without a system GDAL.
# See environment.yml for the conda-forge route (recommended for heavy raster work).
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "numpy>=1.26",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "geopandas>=0.14",
    "rasterio>=1.3",
]

[project.optional-dependencies]
# Optional Phase-02 tooling: whitebox (vector hydrology), scikit-image (lineament draft).
# Phase 02 degrades gracefully (notes instead of outputs) when these are absent.
dem = ["richdem>=0.3; python_version < '3.13'", "whitebox>=2.3", "scikit-image>=0.22"]
openai = ["openai>=1.68,<3"]
anthropic = ["anthropic>=0.45,<1"]
documents = ["pypdfium2>=4.30,<6", "Pillow>=10,<13"]
dev = [
    "build>=1.2,<2.0",
    "hatchling>=1.21",
    "pip>=24.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyright==1.1.410",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.1",
]

[project.scripts]
buduunkhad = "buduunkhad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/buduunkhad"]

[tool.hatch.build.targets.wheel.force-include]
"config/methodology" = "buduunkhad/methodology_data"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "B008",   # typer uses function calls (Option/Argument) in defaults by design
]

[tool.ruff.lint.isort]
known-first-party = ["buduunkhad"]

[tool.mypy]
python_version = "3.11"
packages = ["buduunkhad"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
check_untyped_defs = true

# Newer numpy (and tifffile/scikit-image, pulled in via the [dem] extra) ship PEP 695
# `type` statements that mypy rejects when targeting < 3.12; we don't type-check against
# their internals, so skip following them (treated as Any, like the other geospatial libs).
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "tifffile", "tifffile.*", "skimage", "skimage.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
# Basic mode matches the default Pylance editor experience: it catches real type
# errors (e.g. unresolved call overloads) without drowning the partially-typed
# geospatial stack (rasterio/geopandas/fiona) in unknown-type noise.
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
